# TeeBotus

./: .env.example  .gitignore  ALL_BOTS_DEFAULT.md  BOT.md  Bot_Verhalten.md  CHANGELOG.md  EASTER_EGGS.json  README.md  cgi.py  memory_schema_v2_plan.json  pyproject.toml  requirements.txt  teladi.conf
Abgeschlossene Baupläne/: Bauplan-Aktueller-Arbeitsstand-Healthcheck-TBL-Statussemantik-2026-07-13.md  Bauplan-Aktueller-Healthcheck-Warnungsabbau-und-Codex-History-Reconciliation-2026-07-13.md  Bauplan-Aktueller-Plan-Bridge-Reconciliation-2026-07-13.md  Bauplan-Aktueller-Plan-Dispatcher-Teilfehler-Idempotenz-2026-07-13.md  Bauplan-Aktueller-Plan-Healthcheck-Applet-und-Codex-History-2026-07-13.md  Bauplan-Aktueller-Plan-Healthcheck-Codex-History-2026-07-13.md  Bauplan-Aktueller-Plan-Healthcheck-TBL-Statussemantik-2026-07-13.md  Bauplan-Aktueller-Plan-Logikfehler-Healthcheck-Applet-Codex-History-2026-07-13.md  Bauplan-Aktueller-Plan-Logikfehler-LLM-Key-Prioritaet-2026-07-13.md  Bauplan-Aktueller-Plan-Logikpruefung-2026-07-15.md  Bauplan-Aktueller-Plan-Logikpruefung-2026-07-16-01-Grundlagen-und-Fruehe-Funde.md  Bauplan-Aktueller-Plan-Logikpruefung-2026-07-16-03-Logikpruefung-Historie-Teil-2.md  Bauplan-Aktueller-Plan-Logikpruefung-Telegram-Runtime-2026-07-13.md  Bauplan-Aktueller-Plan-Logikpruefung-Versionskonsistenz-2026-07-13.md  Bauplan-Aktueller-Planstand-Healthcheck-Applet-2026-07-13.md  Bauplan-Aktueller-Planstand-Healthcheck-Warnungen-2026-07-13.md  Bauplan-Aktueller-Stand-Logikpruefung-Codex-History-2026-07-13.md  Bauplan-Fortsetzung-Healthcheck-TBL-Reconciliation-2026-07-13.md  Bauplan-Logikpruefung-Codex-History-2026-07-13.md  Healthcheck-Applet-Plan.md  README.md
Baupläne/: Aktueller-Plan-Logikpruefung-Codex-History.md  Bauplan-Aktueller-Arbeitsstand-Healthcheck-TBL-Statussemantik-2026-07-13.md  Bauplan-Aktueller-Arbeitsstand-Logikpruefung-Codex-History-2026-07-13.md  Bauplan-Aktueller-Healthcheck-Applet-2026-07-13.md  Bauplan-Aktueller-Healthcheck-Warnungsabbau-und-Codex-History-Reconciliation-2026-07-13.md  Bauplan-Aktueller-Plan-Bridge-Reconciliation-2026-07-13.md  Bauplan-Aktueller-Plan-Dispatcher-Teilfehler-Idempotenz-2026-07-13.md  Bauplan-Aktueller-Plan-Healthcheck-Applet-und-Codex-History-2026-07-13.md  Bauplan-Aktueller-Plan-Healthcheck-Codex-History-2026-07-13.md  Bauplan-Aktueller-Plan-Healthcheck-TBL-Statussemantik-2026-07-13.md  Bauplan-Aktueller-Plan-Logikfehler-Healthcheck-Applet-Codex-History-2026-07-13.md  Bauplan-Aktueller-Plan-Logikfehler-LLM-Key-Prioritaet-2026-07-13.md  Bauplan-Aktueller-Plan-Logikpruefung-2026-07-15.md  Bauplan-Aktueller-Plan-Logikpruefung-2026-07-16-01-Grundlagen-und-Fruehe-Funde.md  Bauplan-Aktueller-Plan-Logikpruefung-2026-07-16-02-Logikpruefung-Historie-Teil-1.md  Bauplan-Aktueller-Plan-Logikpruefung-2026-07-16-04-Aktueller-Stand-und-Ledger.md  Bauplan-Aktueller-Plan-Logikpruefung-2026-07-16.md  Bauplan-Aktueller-Plan-Logikpruefung-Telegram-Runtime-2026-07-13.md  Bauplan-Aktueller-Plan-Logikpruefung-Versionskonsistenz-2026-07-13.md  Bauplan-Aktueller-Planstand-Healthcheck-Applet-2026-07-13.md  Bauplan-Aktueller-Planstand-Healthcheck-Warnungen-2026-07-13.md  Bauplan-Aktueller-Planstand-Logikpruefung-Codex-History-2026-07-13.md  Bauplan-Aktueller-Stand-Logikpruefung-Codex-History-2026-07-13.md  Bauplan-Fortsetzung-Healthcheck-TBL-Reconciliation-2026-07-13.md  Bauplan-Healthcheck-Applet-Aktuelle-Logikpruefung-2026-07-13.md  Bauplan-Logikpruefung-Codex-History-2026-07-13.md  Bauplan-SQL-Fallback-und-Migrationsschutz-2026-07-16.md  Healthcheck-Applet-Plan.md  README.md
TeeBotus/: __init__.py  __main__.py  artifact_outputs.py  bot.py  cinnamon_applet.py  codex_history_systemd.py  handlers.py  history_dispatcher_bridge.py  history_dispatcher_migration.py  instructions.py  legacy_bot.py  llm_client.py  openai_client.py  proactive.py  proactive_review.py  proactive_systemd.py  qdrant_systemd.py  selinux_doctor.py  systemd.py  telegram_bot.py  user_memory_crypto.py
config/: hf_pool.yaml  llm_profiles.yaml  llm_routing.yaml
docs/: AGB.md  Codex_Outbox_History_Plan.md  Plan1.md  Plan2.md  Plan3.md  README.md  SELinux_Doctor.md  memory-schema-v2.md  multi-channel-runtime-account-plan.yaml  privacy-and-encryption.de.md  (+2 more)
(+305 files in other folders)
