[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teebotus"
dynamic = ["version"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pip-audit",
]
llm = [
    "litellm!=1.82.7,!=1.82.8",
    "openai",
    "ollama",
]
agents = [
    "pydantic-ai",
    "langgraph",
]
rag = [
    "haystack-ai",
    "qdrant-haystack",
    "sentence-transformers",
    "pypdf",
    "pymupdf",
    "ebooklib",
    "beautifulsoup4",
]
tools = [
    "fastmcp",
]

[project.scripts]
teebotus-bibliothekar = "TeeBotus.bibliothekar.cli:main"
teebotus-systemd = "TeeBotus.systemd:main"
teebotus-proactive = "TeeBotus.proactive:main"
teebotus-proactive-review = "TeeBotus.proactive_review:main"
teebotus-proactive-systemd = "TeeBotus.proactive_systemd:main"
teebotus-qdrant-systemd = "TeeBotus.qdrant_systemd:main"

[tool.setuptools.packages.find]
include = ["TeeBotus*"]

[tool.setuptools.dynamic]
version = {attr = "TeeBotus.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
