[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teebotus"
dynamic = ["version"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pip-audit",
]
llm = [
    "litellm==1.83.7",
    "python-dotenv==1.0.1",
    "openai",
    "ollama",
]
agents = [
    "pydantic-ai-slim==1.107.0",
    "langgraph==1.2.5",
]
rag = [
    "haystack-ai==2.30.1",
    "qdrant-haystack==10.3.0",
    "sentence-transformers==5.5.1",
    "pypdf==6.13.2",
    "pymupdf==1.27.2.3",
    "ebooklib==0.20",
    "beautifulsoup4",
]
tools = [
    "fastmcp==2.0.0",
]

[project.scripts]
teebotus-bibliothekar = "TeeBotus.bibliothekar.cli:main"
teebotus-systemd = "TeeBotus.systemd:main"
teebotus-proactive = "TeeBotus.proactive:main"
teebotus-proactive-review = "TeeBotus.proactive_review:main"
teebotus-proactive-systemd = "TeeBotus.proactive_systemd:main"
teebotus-qdrant-systemd = "TeeBotus.qdrant_systemd:main"

[tool.setuptools.packages.find]
include = ["TeeBotus*"]

[tool.setuptools.dynamic]
version = {attr = "TeeBotus.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
