[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teebotus"
dynamic = ["version"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pip-audit",
]
llm = [
    "litellm==1.89.2; python_version < '3.14'",
    "python-dotenv==1.2.2; python_version < '3.14'",
    "litellm==1.83.7; python_version >= '3.14'",
    "python-dotenv==1.0.1; python_version >= '3.14'",
    "openai==2.43.0; python_version < '3.14'",
    "openai==2.30.0; python_version >= '3.14'",
    "ollama==0.6.2",
]
agents = [
    "pydantic-ai-slim==1.107.0",
    "langgraph==1.2.6",
]
rag = [
    "haystack-ai==2.30.2",
    "qdrant-haystack==10.3.0",
    "sentence-transformers==5.6.0",
    "pypdf==6.13.3",
    "pymupdf==1.27.2.3",
    "ebooklib==0.20",
    "beautifulsoup4==4.15.0",
    "llama-index-core==0.14.22",
]
tools = [
    "fastmcp==3.4.2; python_version < '3.14'",
    "fastmcp==2.2.0; python_version >= '3.14'",
]

[project.scripts]
teebotus-bibliothekar = "TeeBotus.bibliothekar.cli:main"
teebotus-systemd = "TeeBotus.systemd:main"
teebotus-proactive = "TeeBotus.proactive:main"
teebotus-proactive-review = "TeeBotus.proactive_review:main"
teebotus-proactive-systemd = "TeeBotus.proactive_systemd:main"
teebotus-qdrant-systemd = "TeeBotus.qdrant_systemd:main"
teebotus-embedding = "TeeBotus.embedding.cli:main"
teebotus-cinnamon-applet = "TeeBotus.cinnamon_applet:main"

[tool.setuptools.packages.find]
include = ["TeeBotus*"]

[tool.setuptools.dynamic]
version = {attr = "TeeBotus.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests that require explicit live external services or provider calls",
]
